2009-11-12  Philippe Brochard  <pbrochard@common-lisp.net>

	* src/clfswm-util.lisp (save-configuration-variables): New
	function to save all configuration variables in clfswmrc.

2009-11-11  Philippe Brochard  <pbrochard@common-lisp.net>

	* src/clfswm-info.lisp (info-mode): Begining of mouse support in
	info mode.
	(set-default-info-keys): Add cursor key support in info mode.

2009-11-08  Philippe Brochard  <pbrochard@common-lisp.net>

	* contrib/reboot-halt.lisp: Add a Suspend/Reboot/Halt menu in
	contrib.

	* src/clfswm.lisp (main): Add a read-conf-file-p parameter to
	prevent reading the configuration file (this may be useful to
	produce the original documentation without user modifications
	with the rc configuration file).

2009-11-07  Philippe Brochard  <pbrochard@common-lisp.net>

	* src/bindings-second-mode.lisp (set-default-second-keys):
	Simplification of Escape key to close/kill/remove the focus window
	and unhide all windows.

	* src/bindings.lisp (set-default-main-keys): Simplification of
	Escape key to close/kill/remove the focus window and unhide all
	windows.

	* src/clfswm-util.lisp (ask-close/kill-current-window): Add remove
	focus and unhide all windows capabilities.

2009-10-10  Philippe Brochard  <pbrochard@common-lisp.net>

	* contrib/mpd.lisp (start-gmpc): Add gmpc in the mpd menu.

2009-07-29  Philippe Brochard  <pbrochard@common-lisp.net>

	* src/clfswm-layout.lisp (tile-layout, tile-horizontal-layout):
	Keep child order and don't make unnecessary child movement.
	(one-column-layout, one-line-layout): New layouts.

2009-06-29  Philippe Brochard  <pbrochard@common-lisp.net>

	* contrib/cd-player.lisp: New file to handle the CD player.

	* contrib/xmms.lisp: New file to handle the xmms player.

2009-06-28  Philippe Brochard  <pbrochard@common-lisp.net>

	* src/clfswm-layout.lisp (set-no-layout-remember-size): New layout:
	Maximize windows in there frame - Leave frames to there	actual
	size.
