@@ -65,13 +65,16 @@
 				:depends-on ("clfswm" "clfswm-util" "clfswm-second-mode"))
 			 (:file "clfswm-nw-hooks"
 				:depends-on ("package" "clfswm-util" "clfswm-info" "clfswm-layout" "menu-def"))
+			 (:file "clfswm-configuration"
+				:depends-on ("package" "config" "clfswm-internal" "clfswm-util" "clfswm-query"
+						       "clfswm-menu"))
+			 (:file "menu-def"
+				:depends-on ("clfswm-menu" "clfswm-configuration" "clfswm" "clfswm-util" "clfswm-info"))
 			 (:file "bindings"
 				:depends-on ("clfswm" "clfswm-internal" "clfswm-util" "clfswm-menu"))
 			 (:file "bindings-second-mode"
 				:depends-on ("clfswm" "clfswm-util" "clfswm-query" "bindings" "clfswm-pack" "clfswm-menu" "menu-def"
-						      "clfswm-layout"))
-			 (:file "menu-def"
-				:depends-on ("clfswm-menu" "clfswm" "clfswm-util" "clfswm-info"))))))
+						      "clfswm-layout"))))))
 
 
 
